[gd_scene load_steps=7 format=2]

[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_HOptionSelector/Assets/PlayerGUI_HOptionSelector_LeftArrowButton_Normal.png" type="Texture" id=1]
[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_HOptionSelector/Assets/PlayerGUI_HOptionSelector_LeftArrowButton_Hovered.png" type="Texture" id=2]
[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_HOptionSelector/Assets/PlayerGUI_HOptionSelector_LeftArrowButton_Disabled.png" type="Texture" id=3]
[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_OptionButtonStandard/PlayerGUI_OptionButtonStandard.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameSaveRelated/GUIs/GameStatsRelated/Subs/GSM_PerGame_SpecificGStats_ListPanel/GSM_PerGame_SpecificGStats_ListPanel.gd" type="Script" id=5]
[ext_resource path="res://GameSaveRelated/GUIs/GameStatsRelated/Subs/GSM_PerGame_SpecificGStats_Panel/GSM_PerGame_SpecificGStats_Panel.tscn" type="PackedScene" id=6]

[node name="GSM_PerGame_ListPanel" type="MarginContainer"]
margin_right = 274.0
margin_bottom = 119.0
rect_min_size = Vector2( 370, 0 )
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 370.0
margin_bottom = 241.0
custom_constants/separation = 16

[node name="OptionButton" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_left = 85.0
margin_right = 285.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 370.0
margin_bottom = 241.0
custom_constants/separation = 30

[node name="LeftButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_top = 86.0
margin_right = 22.0
margin_bottom = 118.0
focus_mode = 0
size_flags_vertical = 6
enabled_focus_mode = 0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[node name="GSM_PerGame_Panel" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 52.0
margin_right = 318.0
margin_bottom = 205.0
size_flags_horizontal = 3

[node name="RightButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 348.0
margin_top = 86.0
margin_right = 370.0
margin_bottom = 118.0
focus_mode = 0
size_flags_vertical = 6
enabled_focus_mode = 0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )
flip_h = true

[connection signal="item_selected" from="VBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RightButton" to="." method="_on_RightButton_pressed"]
